# Telegram_AIogram_Favorites_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bot.py  docker-compose.yaml  loader.py  pyproject.toml  req.txt  requirements.txt
async_bot/: app.py  loader.py
async_bot/handlers/: calend.py  handlers.py  main_utils.py
db/: create_tables.py  postgresql.py
handlers/: handlers.py
keyboards/: keyboards.py
